--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ de las Tinajas” </li>
 <li>Desde 1990 hasta 2013 he realizado Actividades Artísticas como monitora, actriz de teatro, actriz de cortos, letrista, guionista, escenografías y recitales de poesías y coros.</li> 
 </ul>
 
-<a href="#colaboraciones"><h2>COLABORACIONES Y PARTICIPACIONES</h2></a> 
+<a href="#colaboraciones"data-toggle='collapse'><h2>COLABORACIONES Y PARTICIPACIONES</h2></a> 
 <ul id='colaboraciones' class='collapse'>
 <li>Voluntaria en el Campo de Trabajo (Diálogo entre Arte y Medio Ambiente). Almedinilla (Córdoba).2006.</li> 
 <li>Dependienta y Recepcionista de la floristería familiar en Valldoreix (Barcelona).</li> 
